2011-12-21  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	(MY_JAVAC_FLAGS): Explicitly set source and target
	to 1.5.
	* src/gnu/ldml/Analyzer.java,
	* src/gnu/ldml/Element.java,
	* src/gnu/ldml/ExpansionElement.java,
	* src/gnu/ldml/ListDataElement.java,
	* src/gnu/ldml/OrderedListBaseElement.java,
	* src/gnu/ldml/ParseException.java,
	* src/gnu/ldml/Parser.java,
	* src/gnu/localegen/CollationInterpreter.java,
	* src/gnu/localegen/PropertiesGenerator.java:
	Update with generics.

2011-09-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* INSTALL: Remove autogenerated file.
	* autogen.sh: Update to allow libtool 2.*.
	* configure.ac: Set m4 as macro directory.

2008-07-08  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* src/gnu/localegen/PropertiesGenerator.java,
	Replace v in time patterns with z, as the Java
	specification doesn't include v.
	
2008-07-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* src/gnu/supplementgen/Main.java:
	(Info): Renamed from ZoneInfo.
	(SupplementalHandler.startElement(String,String,String,Attributes)):
	Capture first day data as well as minimum days in week.
	
2008-07-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* src/gnu/supplementgen/Main.java:
	Add support for generating metazones.properties.
	(CurrencyInfo.equals(Object)): Implemented.
	(CurrencyInfo.hashCode()): Likewise.
	(ZoneInfo): New class to act as a key for zone info.
	(SupplementalHandler.SupplementalHandler(PrintWriter,PrintWriter,PrintWriter)):
	Add new print writer for metazones.properties.
	(SupplementalHandler.endElement(String,String,String)):
	Output zone data.
	(SupplementalHandler.startDocument()): Add header for metazones.properties.
	(SupplementalHandler.startElement(String,String,String,Attributes)):
	Collect zone data.

2008-07-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am: Replace currencygen with supplementgen.
	* bin/currencygen.in: Renamed to...
	* bin/supplementgen.in: ...this.