@@ -38,10 +38,10 @@ import gnu.ldml.OrderedListElement;
 public class JavaGenerator
 {
   private static final int JAVA_HEXLENGTH = 4;
-  private final Collection analyzers;
+  private final Collection<Analyzer> analyzers;
   private final String locale;
   private final String inPackage;
-  private ArrayList localeContents = new ArrayList();
+  private ArrayList<JavaContent> localeContents = new ArrayList<JavaContent>();
   private static final String[] classpathDateFormats = { "shortDateFormat",
                                                         "mediumDateFormat",
                                                         "longDateFormat",
@@ -139,7 +139,7 @@ public class JavaGenerator
     public void generateContent(PrintWriter o)
     {
     }
-    
+
     public boolean isUsable()
     {
       return true;
@@ -266,12 +266,12 @@ public class JavaGenerator
   class OrderedListContent implements JavaContent
   {
     private String name;
-    private Hashtable data;
+    private Hashtable<String,Object> data;
     private String[] order;
     private int prependNull;
     private int appendNull;
 
-    public OrderedListContent(String name, Hashtable data, String[] order,
+    public OrderedListContent(String name, Hashtable<String,Object> data, String[] order,
                               int prependNull, int appendNull)
     {
       this.name = name;
@@ -350,52 +350,51 @@ public class JavaGenerator
 
     public void generateContent(PrintWriter o)
     {
-      Enumeration keys = listElt.listData.keys();
+      Enumeration<String> keys = listElt.listData.keys();
       StringBuffer buffer = new StringBuffer();
 
       buffer.append("  private static final String[][] zoneStrings =\n");
       buffer.append("  {\n");
 
       while (keys.hasMoreElements())
-	{
-	  String zoneName = (String)keys.nextElement();
-	  Hashtable zoneTable;
-	  Iterator allValues;
-	  DataElement zoneData;
-	  StringBuffer buffer2 = new StringBuffer();
-	  boolean zoneDataFound = false;
+        {
+          String zoneName = keys.nextElement();
+          Hashtable<String,Element> zoneTable;
+          DataElement zoneData;
+          StringBuffer buffer2 = new StringBuffer();
+          boolean zoneDataFound = false;
 
-	  buffer2.append("    { ");
-  
-	  buffer2.append(" \"" + zoneName + "\", ");
+          buffer2.append("    { ");
 
-	  zoneTable = listElt.flattenLeaf(zoneName);
-	  for (int j = 0; j < classpathZoneOrder.length; j++)
-	  {
-	    zoneData = (DataElement)zoneTable.get(classpathZoneOrder[j]);
-	    if (zoneData != null)
-	      {
-		buffer2.append("\"");
-		buffer2.append(convertToJavaString(zoneData.data));
-		buffer2.append("\", ");
-		zoneDataFound = true;
-	      }
-	    else
-	      /* TODO: Emit a warning here "Insufficient data" */
-	      buffer2.append("\"\", ");
-	  }
-	  if (zoneDataFound)
-	    {
-	      buffer.append(buffer2.substring(0, buffer2.length() - 2));
-	      buffer.append("},\n");
-	      usable = true;
-	    }
-	}
+          buffer2.append(" \"" + zoneName + "\", ");
+
+          zoneTable = listElt.flattenLeaf(zoneName);
+          for (int j = 0; j < classpathZoneOrder.length; j++)
+          {
+            zoneData = (DataElement) zoneTable.get(classpathZoneOrder[j]);
+            if (zoneData != null)
+              {
+                buffer2.append("\"");
+                buffer2.append(convertToJavaString(zoneData.data));
+                buffer2.append("\", ");
+                zoneDataFound = true;
+              }
+            else
+              /* TODO: Emit a warning here "Insufficient data" */
+              buffer2.append("\"\", ");
+          }
+          if (zoneDataFound)
+            {
+              buffer.append(buffer2.substring(0, buffer2.length() - 2));
+              buffer.append("},\n");
+              usable = true;
+            }
+        }
       if (usable)
-	{
-	  o.print(buffer);
-	  o.println("  };");
-	}
+        {
+          o.print(buffer);
+          o.println("  };");
+        }
     }
 
     public boolean isUsable()
@@ -407,9 +406,9 @@ public class JavaGenerator
   class HashtableContent implements JavaContent
   {
     private String name;
-    private Hashtable table;
+    private Hashtable<String,Object> table;
 
-    public HashtableContent(String name, Hashtable table)
+    public HashtableContent(String name, Hashtable<String,Object> table)
     {
       this.name = name;
       this.table = table;
@@ -433,11 +432,11 @@ public class JavaGenerator
     public void generateContent(PrintWriter o)
     {
       o.print("  private static final String " + name + "Keys = \"");
-      Enumeration keys = table.keys();
+      Enumeration<String> keys = table.keys();
       boolean more = keys.hasMoreElements();
       while (more)
         {
-          String key = (String) keys.nextElement();
+          String key = keys.nextElement();
           if (key.indexOf("\u00A6") != -1)
             {
               System.err.println(name + " key: '" + key + "' contains \u00A6");
@@ -455,7 +454,7 @@ public class JavaGenerator
       more = keys.hasMoreElements();
       while (more)
         {
-          String key = (String) keys.nextElement();
+          String key = keys.nextElement();
           String value = (String) table.get(key);
           value = convertToJavaString(value);
           if (value.indexOf("\u00A6") != -1)
@@ -496,14 +495,14 @@ public class JavaGenerator
   /*
    * Main body of the Java Locale generator.
    */
-  public JavaGenerator(String inPackage, Collection analyzers, String locale)
+  public JavaGenerator(String inPackage, Collection<Analyzer> analyzers, String locale)
   {
     this.analyzers = analyzers;
     this.inPackage = inPackage;
     this.locale = locale;
   }
 
-  public void addStringContent(Hashtable tree, String ref, String name)
+  public void addStringContent(Hashtable<String,Element> tree, String ref, String name)
   {
     DataElement data_elt = (DataElement) tree.get(ref);
     if (data_elt == null)
@@ -511,7 +510,7 @@ public class JavaGenerator
     localeContents.add(new StringContent(name, data_elt.data));
   }
 
-  public void addOrderedListContent(Hashtable tree, String ref, String name,
+  public void addOrderedListContent(Hashtable<String,Element> tree, String ref, String name,
                                     String[] order, int prependNull,
                                     int appendNull)
   {
@@ -522,7 +521,7 @@ public class JavaGenerator
                                               prependNull, appendNull));
   }
 
-  private void computeCalendar(Hashtable flattree)
+  private void computeCalendar(Hashtable<String,Element> flattree)
   {
     ListDataElement calendarElement;
     calendarElement = (ListDataElement) flattree.get("ldml.dates.calendars");
@@ -531,7 +530,7 @@ public class JavaGenerator
         // GNU Classpath only supports gregorian calendar ATM. We will upgrade
         // the code
         // once it has been done in GNU Classpath.
-        Hashtable calendarLeaf = calendarElement.flattenLeaf("gregorian");
+        Hashtable<String,Element> calendarLeaf = calendarElement.flattenLeaf("gregorian");
         int i = 0;
         if (calendarLeaf == null)
           return;
@@ -550,14 +549,14 @@ public class JavaGenerator
         addOrderedListContent(calendarLeaf,
                               "calendar.days.dayContext.dayWidth.wide",
                               "weekdays", gnu.ldml.Constants.daysOrder, 1, 0);
-	/* WEEKS */
-	Element minDays = (Element) calendarLeaf.get("calendar.week.minDays");
-	if(minDays != null)
+        /* WEEKS */
+        Element minDays = calendarLeaf.get("calendar.week.minDays");
+        if(minDays != null)
           localeContents
             .add(new StringContent("minNumberOfDaysInFirstWeek", minDays.defaultType));
 
-	Element firstDay = (Element) calendarLeaf.get("calendar.week.firstDay");
-	if(firstDay != null)
+        Element firstDay = calendarLeaf.get("calendar.week.firstDay");
+        if(firstDay != null)
           localeContents
             .add(new StringContent("firstDayOfWeek", firstDay.defaultType));
 
@@ -590,7 +589,7 @@ public class JavaGenerator
           {
             for (int j = 0; j < gnu.ldml.Constants.dateFormats.length; j++)
               {
-                Hashtable dateFormat = dateFormats
+                Hashtable<String,Element> dateFormat = dateFormats
                   .flattenLeaf(gnu.ldml.Constants.dateFormats[j]);
                 if (dateFormat == null)
                   continue;
@@ -606,7 +605,7 @@ public class JavaGenerator
           {
             for (int j = 0; j < gnu.ldml.Constants.timeFormats.length; j++)
               {
-                Hashtable timeFormat = timeFormats
+                Hashtable<String,Element> timeFormat = timeFormats
                   .flattenLeaf(gnu.ldml.Constants.timeFormats[j]);
                 if (timeFormat == null)
                   continue;
@@ -618,13 +617,13 @@ public class JavaGenerator
       }
   }
 
-  private void computeCollations(Hashtable flattree)
+  private void computeCollations(Hashtable<String,Element> flattree)
   {
     ListDataElement collations = (ListDataElement) flattree
       .get("ldml.collations");
     if (collations == null)
       return;
-    Hashtable table = collations.flattenLeaf("standard");
+    Hashtable<String,Element> table = collations.flattenLeaf("standard");
     if (table == null)
       return;
     System.err.println("Found UCA table for collation rules");
@@ -639,19 +638,14 @@ public class JavaGenerator
       .toCollationRule()));
   }
 
-  private void computeHashtable(String name, Hashtable table)
+  private void computeTimeZones(Hashtable<String,Element> flattree)
   {
-    localeContents.add(new HashtableContent(name, table));
-  }
-
-  private void computeTimeZones(Hashtable flattree)
-  {
-    Element elt = (Element) flattree.get("ldml.dates.timeZoneNames");
+    Element elt = flattree.get("ldml.dates.timeZoneNames");
     if (elt != null)
       localeContents.add(new TimeZoneContent((ListDataElement) elt));
   }
 
-  private void computeLocalNames(Hashtable flattree)
+  private void computeLocalNames(Hashtable<String,Element> flattree)
   {
     ListDataElement elt = (ListDataElement) flattree
       .get("ldml.localeDisplayNames.territories");
@@ -665,19 +659,19 @@ public class JavaGenerator
       localeContents.add(new HashtableContent("variants", elt.listData));
   }
 
-  private void computeCurrencies(Hashtable flattree)
+  private void computeCurrencies(Hashtable<String,Element> flattree)
   {
     ListDataElement elt = (ListDataElement) flattree
       .get("ldml.numbers.currencies");
     if (elt == null)
       return;
-    Enumeration currencyKeys = elt.listData.keys();
-    Hashtable currencyName = new Hashtable();
-    Hashtable currencySymbol = new Hashtable();
+    Enumeration<String> currencyKeys = elt.listData.keys();
+    Hashtable<String,Object> currencyName = new Hashtable<String,Object>();
+    Hashtable<String,Object> currencySymbol = new Hashtable<String,Object>();
     while (currencyKeys.hasMoreElements())
       {
-        String code = (String) currencyKeys.nextElement();
-        Hashtable currencyTable = elt.flattenLeaf(code);
+        String code = currencyKeys.nextElement();
+        Hashtable<String,Element> currencyTable = elt.flattenLeaf(code);
         DataElement displayName = (DataElement) currencyTable
           .get("currency.displayName");
         DataElement symbol = (DataElement) currencyTable.get("currency.symbol");
@@ -694,10 +688,10 @@ public class JavaGenerator
 
   private void computeContents()
   {
-    for (Iterator i = analyzers.iterator(); i.hasNext();)
+    for (Iterator<Analyzer> i = analyzers.iterator(); i.hasNext();)
       {
-        Analyzer analyzer = (Analyzer) i.next();
-        Hashtable flattree = analyzer.flattenTree();
+        Analyzer analyzer = i.next();
+        Hashtable<String,Element> flattree = analyzer.flattenTree();
         addStringContent(flattree, "ldml.numbers.symbols.percentSign",
                          "percent");
         addStringContent(flattree, "ldml.numbers.symbols.perMille", "perMill");
@@ -809,17 +803,17 @@ public class JavaGenerator
     o.println("  {");
     for (int i = 0; i < localeContents.size(); i++)
       {
-        JavaContent content = (JavaContent) localeContents.get(i);
-	if (content.isUsable())
-	  {
-	    if (content.isPackage())
-	      o.print("    { \"" + content.getName() + "\", " + content.getName()
-		      + " }");
-	    else
-	      o.print("    { \"" + content.getName() + "\", \""
-		      + convertToJavaString(content.getData()) + "\" }");
-	    o.println(",");
-	  }
+        JavaContent content = localeContents.get(i);
+        if (content.isUsable())
+          {
+            if (content.isPackage())
+              o.print("    { \"" + content.getName() + "\", " + content.getName()
+                      + " }");
+            else
+              o.print("    { \"" + content.getName() + "\", \""
+                      + convertToJavaString(content.getData()) + "\" }");
+            o.println(",");
+          }
       }
     o.println("  };");
     o.println();
