@@ -1,3 +1,10 @@
+2012-01-13  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* src/gnu/localegen/JavaGenerator.java,
+	* src/gnu/localegen/Main.java,
+	* src/gnu/supplementgen/Main.java:
+	Update with generics.
+
 2011-12-21  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* Makefile.am:
